--- a/Labs/lab-4-2023.md
+++ b/Labs/lab-4-2023.md
@@ -2,9 +2,9 @@
 
 
 ---
-title: "My fancy report"
-author: "Author name"
-date: "2022 July 15"
+title: "Lab 4"
+author: "Jeffrey Miller"
+date: "Spring 2024"
 output: html_document
 ---
 
