updated lab1 -kaleb

--- a/Labs/Lab4/lab-4-2023.Rmd
+++ b/Labs/Lab4/lab-4-2023.Rmd
@@ -5,7 +5,7 @@ date: "2022 Feb 24"
 output: pdf_document
 ---
 
-render('lab-4-2023.md', output_format = "pdf_document")  
+<!-- render('lab-4-2023.md', output_format = "pdf_document")  -->
 
 
 ## Review Last Week Objectives:
