--- a/Labs/Lab3_old/lab-3-2023.md
+++ b/Labs/Lab3_old/lab-3-2023.md
@@ -1,26 +1,6 @@
-Exc. 3a   "3 ways to change directories to HOME from untrimmed_fastq"
-1.
-2.
-3.
-
-3b. How many programs in /bin 
-1. Start with the letter c
-2. Start with the letter a
-3. Start with the letter o
-
-
-
 ---
 output: pdf_document
 ---
-
-
-1. Open vscode
-2. Go to 'File --> Open workspace from file'
-3. Go into your gen711 folder on the desktop
-4. Select the workspace you saved last week.
-5. Open terminal (menu bar --> terminal --> new terminal )
-6. Determine if the terminal is in 'gen711_lab' folder
 
 ## Today:
 - Navigating Files and Directories (review and new)
@@ -75,7 +55,7 @@ cd ../../
 ls
 >shell_data
 ```  
-- Use the tab to fugure out where you are
+- Use the tab to find out where you are and where you can go
 ```
 cd ../<tab>
 cd ../../
@@ -92,8 +72,8 @@ pwd
 >/home/unhAW/jtmiller
 ```  
 
-### The tilda shortcut takes you home
-- If you end up in the wrong directory, or something that you do not recognize, remember that the (~, green/yellow/esc)
+### Tilde
+- Use the tilde shortcut to take you home. If you end up in the wrong directory, or something that you do not recognize, remember that the (~, green/yellow/esc)
 ```  
 cd ~
 
@@ -106,11 +86,8 @@ cd ~
 - Relative paths specify the location starting from the current location, 
 - wWhile absolute paths specify a location from the root of the file system.
 
-### The / by itself, takes you all the way back to root. 
-
-- There are two differnt ways to change directories into shell data 
-
-- The relative path
+### The / by itself, takes you all the way back to root.  
+There are two different ways to change directories into shell data. The relative path:  
 ```
 cd gen711/shell_data
 ```
@@ -133,29 +110,19 @@ cd ../
 cd /Users/jeffreymiller/Desktop/gen711_lab/shell_data/untrimmed_fastq
 ```  
 
-## Exercise 3a:
+## Pause for exercise 3a:
 - Now, from 'untrimmed_fastq', what are three ways to navigate to your home directory?
 
 
 
 
-
-
+# Working with Files and Directories
 
 ## Hidden files
 - Hidden files and directories start with . and can be viewed using ls -a.
 - Sometimes, its better to hide files from the command line. Like system files that shouldn't be messed with by the command line user.
 - Somewhere in 'shell_data' is a hidden file. 
 - Mention ls -aF and ls -Fa are the same, but case matters alot
-
-
-
-
-
-
-
-
-# Working with Files and Directories
 
 ### We are interested in looking at the FASTQ files in this directory. We can list all files with the .fastq extension using the command:
 Questions
@@ -168,7 +135,6 @@ Objectives
     Use wildcards (*) to perform operations on multiple files.
     Make a file read only.
     Use the history command to view and repeat recently used commands.
-
 
 Now that we know how to navigate around our directory structure, let’s start working with our sequencing files. We did a sequencing experiment and have two results files, which are stored in our untrimmed_fastq directory.
 
@@ -215,7 +181,8 @@ ls /Users/jeffreymiller/Desktop/gen711_lab/shell_data/untrimmed_fastq/*fastq
 
 2. 'echo' is a built-in shell command that writes its arguments, like a line of text to standard output. The 'echo' command can also be used with pattern matching characters, such as wildcard characters. Here we will use the echo command to see how the wildcard character is interpreted by the shell.  What does echo say when you try to match something that is not there? What about ls?
 
-Don't Scroll To Bottom! ANSWERS ARE BELOW
+
+
 
 
 
@@ -233,9 +200,11 @@ Don't Scroll To Bottom! ANSWERS ARE BELOW
 - ctrl + r (find in your command history)
 - ctrl + L (clear)
 
-## Exercise:
-- Find the line number in your history for the command that listed all the .fastq files using the absolute path . Rerun that command.
-history | grep -n 'grep'
+
+
+
+
+
 
 
 
